Ensure full map is visible in mobile view

--- a/css/plan.css
+++ b/css/plan.css
@@ -93,7 +93,7 @@ nav.mobile label:last-of-type { width:calc(50%); }
 
 main.stickyFooter { padding-bottom:60px; }
 main:not(.stickyFooter) { padding-bottom:30px; }
-section.map { width:100%; height:calc(50vh); }
+section.map { margin-bottom:33px; }
 section.map > iframe { width:100%; height:calc(100vh - 50px); }   
 
 nav.secondary > ul { margin-bottom:70px; }
